--- a/ipc-client/Makefile
+++ b/ipc-client/Makefile
@@ -3,7 +3,7 @@ include ../config.mk
 
 # project
 SRCDIR = .
-SRC = $(wildcard $(SRCDIR)/*.c)
+SRC = $(wildcard $(SRCDIR)/*.c) ../src/utils.c
 HEADER = $(wildcard $(SRCDIR)/*.h) ../src/ipc-protocol.h
 OBJ = ${SRC:.c=.o}
 TARGET = herbstclient
