added first draft of herbstluftwm manpage

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ ipc-client/herbstclient
 # ignore generated doc
 doc/herbstclient.1
 doc/herbstclient.html
+doc/herbstluftwm.1
+doc/herbstluftwm.html
 
