www: generate header/footer manually
So it isn't generated by asciidoc anymore.

--- a/www/Makefile
+++ b/www/Makefile
@@ -6,26 +6,30 @@ include ../colors.mk
 .PHONY: all clean install
 
 TARGET = cip:wwwcip/herbstluftwm/
-ASCIIDOCFLAGS = -a linkcss -a stylesdir=./ --theme main
+ASCIIDOCFLAGS = -s
+TXT = $(wildcard *.txt)
 
-all: index.html faq.html news.html herbstluftwm.html herbstclient.html
+all: $(TXT:.txt=.html) herbstluftwm.html herbstclient.html
 
-%.html: %.txt header.txt footer.txt
+%-content.html: %.txt
+	$(call colorecho,DOC,$@)
+	$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $@ $<
+
+%.html: %-content.html compose.sh
+	./compose.sh $< > $@
+
+herbstluftwm-content.html: ../doc/herbstluftwm.txt
 	$(call colorecho,DOC,$@)
 	@$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $@ $<
 
-herbstluftwm.html: ../doc/herbstluftwm.txt
-	$(call colorecho,DOC,$@)
-	@$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $@ $<
-
-herbstclient.html: ../doc/herbstclient.txt
+herbstclient-content.html: ../doc/herbstclient.txt
 	$(call colorecho,DOC,$@)
 	@$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $@ $<
 
 news.html: ../NEWS
 
 clean:
-	rm -f *.html
+	rm -f *.html *-content.html
 
 install:
 	@echo scp index.html main.css $(TARGET)
