Added herbstluftwm-tutorial files to .gitignore
This adds herbstluftwm-tutorial.7 and herbstluftwm-tutorial.html to .gitignore,
just like the other generated docs already are.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ doc/herbstclient.1
 doc/herbstclient.html
 doc/herbstluftwm.1
 doc/herbstluftwm.html
+doc/herbstluftwm-tutorial.7
+doc/herbstluftwm-tutorial.html
 
 # ignore build dirs
 build/
