Migrate from git.cs.fau.de to github.com

--- a/www/Makefile
+++ b/www/Makefile
@@ -35,7 +35,7 @@ herbstluftwm.html: ../doc/herbstluftwm.txt
 
 herbstclient.html: ../doc/herbstclient.txt
 
-tour.html: ../doc/herbstluftwm-tutorial.txt
+tutorial.html: ../doc/herbstluftwm-tutorial.txt
 
 faq-toc.html: faq-content.html ./gentoc.sh
 	./gentoc.sh $< > $@
