--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ compiler:
     - gcc
 
 install:
-    - sudo apt-get update
-    - sudo apt-get build-dep herbstluftwm
+    - sudo apt-get -y -q update
+    - sudo apt-get -y -q build-dep herbstluftwm
 
 script:
     - make -j2
