we don't need no quotes

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
     - sudo apt-get -y -q install dzen2
 
 before_script:
-    - "export DISPLAY=:99.0"
-    - "sh -e /etc/init.d/xvfb start"
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
 
 script:
     - make -j2
