Add warning to have xvfb installed

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py3
 skipsdist = true
 
 [testenv]
+# OBACHT / CAUTION: you need to have xvfb installed (xorg-server-xvfb)
 commands = {envpython} -m pytest {posargs}
 deps =
     pytest-xvfb
