--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-    - echo Compiler: $CC / $CXX
+    - echo "Compiler: $CC / $CXX"
     - make -j2
     - sudo make PREFIX=/usr install
     - herbstluftwm &
@@ -33,7 +33,7 @@ jobs:
                       - xterm
                       - tox
           script:
-              - echo Compiler: $CC / $CXX
+              - echo "Compiler: $CC / $CXX"
               - make -j2
               - tox
 
