Split big layout test into smaller pieces

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = py3
 skipsdist = true
 
+# to restrict to certain tests, run e.g.: tox -- -k test_layout
 [testenv]
 # OBACHT / CAUTION: you need to have xvfb installed (xorg-server-xvfb)
 commands = {envpython} -m pytest {posargs}
