Tell clang to ignore sign comparisons and narrowing

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ jobs:
           dist: xenial
           before_install:
               - CC=clang-7 CXX=clang++-7
+              - CXXFLAGS="$CXXFLAGS -Wno-sign-compare -Wno-narrowing"
           addons:
               apt:
                   sources:
