Reintroduce gold linker for GCC8

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ jobs:
           dist: xenial
           before_install:
               - CC=gcc-8 CXX=g++-8
+              - linkerfix="-fuse-ld=gold" # needed to avoid linker error
+              - export LDFLAGS="$san" LDXXFLAGS="$san"
           addons:
               apt:
                   sources:
