--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py3
 skipsdist = true
 
 ###
-# Tips & tricks:
+# Cheatsheet:
 #
 #  * run a specific test suite: tox -- tests/test_layout.py
 #  * run a specific single test case: tox -- tests/test_layout.py::test_single_frame_layout
