--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,15 @@ python: "3.7"
 install:
     - sudo apt-get -y -q update
     - sudo apt-get -y -q build-dep herbstluftwm
+    - sudo apt-get -y -q install cmake ninja-build
     - sudo apt-get -y -q install dzen2
 
 script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-    - echo Using $CC / $CXX
-    - make -j2
-    - sudo make PREFIX=/usr install
+    - cmake -G'Ninja' -DCMAKE_INSTALL_PREFIX=/usr .
+    - ninja -v -k 10
+    - sudo ninja install
     - herbstluftwm &
     - hlwmpid=$!
     - sleep 1
@@ -25,13 +26,8 @@ jobs:
           dist: xenial
           before_install:
               - CC=gcc-8 CXX=g++-8
-
-              # Enable sanitizers for test execution:
-              - san="-fsanitize=address,leak,undefined -fno-omit-frame-pointer -g -O1 -fuse-ld=gold"
-              - export CXXFLAGS="$san" CFLAGS="$san" LDFLAGS="$san" LDXXFLAGS="$san"
-
-              # This is new in gcc-8 and not easily fixed:
-              - CXXFLAGS="$CXXFLAGS -Wno-error=cast-function-type"
+              - linkerfix="-fuse-ld=gold" # needed to avoid linker error
+              - export LDFLAGS="$linkerfix" LDXXFLAGS="$linkerfix"
           addons:
               apt:
                   sources:
@@ -41,8 +37,8 @@ jobs:
                       - xterm
                       - tox
           script:
-              - echo Using $CC / $CXX
-              - make -j2
+              - cmake -G'Ninja' -DCMAKE_BUILD_TYPE=Debug . # run tests with sanitizer
+              - ninja -v -k 10
               - tox
 
         - name: "Ubuntu 16.04, gcc-7"
