Fix tox invocation for out-of-tree builds

--- a/tox.ini
+++ b/tox.ini
@@ -8,3 +8,6 @@ skipsdist = true
 commands = {envpython} -m pytest {posargs}
 deps =
     pytest-xvfb
+
+; Pass $PWD as it is when tox is invoked to pytest (used to find hlwm binaries)
+passenv = PWD
