Add pytest-xdist to tox.ini, improve commentary (#211)

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,19 @@
 envlist = py3
 skipsdist = true
 
-# to restrict to certain tests, run e.g.: tox -- -k test_layout
+###
+# Cheatsheet:
+#
+#  * run a specific test suite: tox -- tests/test_layout.py
+#  * run a specific single test case: tox -- tests/test_layout.py::test_single_frame_layout
+#  * run tests matching a substring expression: tox -- _remove_
+#  * run tests in parallel: tox -- -n auto
+###
+
+###
 [testenv]
 # OBACHT / CAUTION: you need to have xvfb installed (xorg-server-xvfb)
 commands = {envpython} -m pytest {posargs}
 deps =
     pytest-xvfb
+    pytest-xdist
