Fix tox invocation for out-of-tree builds (#213)

--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,6 @@ commands = {envpython} -m pytest {posargs}
 deps =
     pytest-xvfb
     pytest-xdist
+
+; Pass $PWD as it is when tox is invoked to pytest (used to find hlwm binaries)
+passenv = PWD
