--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,16 @@ function (add_debugflags)
 	endforeach()
 endfunction()
 
+# use ccache if available
+find_program(CCACHE ccache)
+if (CCACHE)
+	message(STATUS "Using compiler wrapper: ${CCACHE}")
+	set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE}
+		CACHE FILEPATH "Wrapper for C++ compiler invocations")
+	set(CMAKE_C_COMPILER_LAUNCHER ${CCACHE}
+		CACHE FILEPATH "Wrapper for C compiler invocations")
+endif()
+
 ## install variables
 # prefix for systemwide configuration, accompanies CMAKE_INSTALL_PREFIX
 set(CMAKE_INSTALL_SYSCONF_PREFIX "/etc" CACHE PATH
