--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,6 @@ function (add_debugflags)
 		-Wno-sign-compare -Wno-narrowing
 		-fsanitize=address,leak,undefined
 		-fno-omit-frame-pointer
-		-Wshadow
 		)
 
 	if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
@@ -72,7 +71,7 @@ function (add_debugflags)
 	if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 		# Add clang-specific flags
 		set(FLAGS ${FLAGS}
-			-Wshadow-all
+			-Wshadow -Wno-shadow-field-in-constructor
 			)
 	endif()
 
