--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.1...3.13)
 
 file(STRINGS VERSION VERSION) # read hlwm version from file 'VERSION'
 project(Herbstluftwm
-	VERSION ${VERSION}
-	DESCRIPTION "A manual tiling window manager for X11")
+    VERSION ${VERSION}
+    DESCRIPTION "A manual tiling window manager for X11")
 
 # use our cmake dir for include(…) statements
 list(INSERT CMAKE_MODULE_PATH 0 "${PROJECT_SOURCE_DIR}/cmake")
@@ -22,7 +22,7 @@ include(ccache)
 ## set install variables
 # prefix for systemwide configuration, accompanies CMAKE_INSTALL_PREFIX
 set(CMAKE_INSTALL_SYSCONF_PREFIX "/etc" CACHE PATH
-	"Top-level install path for configuration files. May be given relative to CMAKE_INSTALL_PREFIX.")
+    "Top-level install path for configuration files. May be given relative to CMAKE_INSTALL_PREFIX.")
 
 set(CONFIGDIR "${CMAKE_INSTALL_SYSCONF_PREFIX}/xdg/herbstluftwm")
 set(BINDIR bin)
@@ -30,13 +30,13 @@ set(DATADIR share)
 set(MANDIR ${DATADIR}/man)
 set(DOCDIR ${DATADIR}/doc/herbstluftwm)
 set(LICENSEDIR ${DOCDIR}
-	CACHE PATH "Install path for license file")
+    CACHE PATH "Install path for license file")
 set(XSESSIONSDIR ${DATADIR}/xsessions
-	CACHE PATH "Install path for xsession file")
+    CACHE PATH "Install path for xsession file")
 set(ZSHCOMPLETIONDIR ${DATADIR}/zsh/functions/Completion/X
-	CACHE PATH "Install path for zsh completions file")
+    CACHE PATH "Install path for zsh completions file")
 set(BASHCOMPLETIONDIR ${CMAKE_INSTALL_SYSCONF_PREFIX}/bash_completion.d
-	CACHE PATH "Install path for bash completions file")
+    CACHE PATH "Install path for bash completions file")
 
 ## do the actual work
 add_subdirectory(ipc-client)
@@ -48,3 +48,5 @@ add_subdirectory(share)
 install(FILES BUGS NEWS INSTALL DESTINATION ${DOCDIR})
 install(FILES LICENSE DESTINATION ${LICENSEDIR})
 install(DIRECTORY scripts/ DESTINATION ${DOCDIR}/examples USE_SOURCE_PERMISSIONS)
+
+# vim: et:ts=4:sw=4
