Handle pseudotile consequence via HSClientChanges
This adds a shim for std::optional taken from
https://github.com/akrzemi1/Optional (including the open PR #47).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ target_sources(herbstluftwm PRIVATE
 	globals.h
 	hook.cpp hook.h
 	object.cpp object.h
+	optional.h
 	root.cpp root.h
 	signal.h
 	types.cpp types.h
